Update Screen Added

--- a/Mobflix/app/src/main/res/navigation/nav_graph.xml
+++ b/Mobflix/app/src/main/res/navigation/nav_graph.xml
@@ -16,9 +16,24 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_mainFragment_to_videoEditFragment"
+            app:destination="@id/videoEditFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/videoRegistrationFragment"
         android:name="com.example.mobflix.ui.view.fragment.VideoRegistrationFragment"
         android:label="VideoRegistrationFragment" />
+    <fragment
+        android:id="@+id/videoEditFragment"
+        android:name="com.example.mobflix.ui.view.fragment.VideoEditFragment"
+        android:label="VideoEditFragment" >
+        <argument
+            android:name="videoModel"
+            app:argType="com.example.mobflix.service.model.video.VideoDatabaseModel" />
+    </fragment>
 </navigation>
